Added 2 exercises from past exams. (Compression)

--- a/docs/exercises/ex11.md
+++ b/docs/exercises/ex11.md
@@ -43,6 +43,61 @@ In your implementation, you can rely on and use the classes `BitWriter` and `Bit
 Write a test class `GradeCompressorTest` that extends the given `GradeCompressorTestTemplate` test suite.
 If your implementation of `GradeCompressorImp` is correct, all tests should pass. 
 
+## Part C
+
+Write a compression algorithm for a set of simple chess moves.
+Each chess move consists of
+<number><piece><origin><destination><check> where:
+<number> - the number of the move (i.e. 1 for the 1st, 2 for the 2nd, 3 for the 3rd, etc.) 
+<piece> - which of the pieces is being moved (pawn, rook, knight, bishop, queen, King) 
+<origin>, <destination> - designation of the respective square, in the form E2, H1, A8, etc. Squares are designated with a letter A-H and a number 1-8.
+<check> - a move that results in a check will be marked with !
+e.g.
+"1pe2e4" - Move 1. Pawn from e2 to e4. 
+"2pe7e5" - Move 2. Pawn from e7 to e5. 
+
+1pc2c32pd7d63qd1a4!4pb7b5
+1pf2f32pe7e53pg2g44qd8h4!
+
+Write a class called `ChessCompressor`  that extends the `GenericCompressor` to perform the compression.
+
+You __MUST__ come up with an efficient compression algorithm which is specialized and customized for this problem domain (i.e., do not use either `Huffman` nor `LZW`, but rather use `DnaCompressor` as inspiration).
+
+Write a class called `ChessCompressorTest` to test your work.
+
+## Part D
+
+Write a compression algorithm for a catalog of archival documents. The idea is that there is a large amount of documents stored in archives throughout Norway, and a central repository is needed to keep track of it.
+There are 7 possible archives, for this exercise: 
+NationalArchive     – NAT
+OsloArchive         – OSL
+BergenArhive        – BER
+KristiansandArchive – KRS 
+TrondheimArchive    – TRO 
+TromsoArchive       – TRM 
+MaritimeArchive     - MAR
+For each document you have:
+<Date> - the date at which the document was written.
+The date is in the format: year – month – day. Where the month is written as a 3-letter code: (JAN, FEB, MAR, etc.).
+<Archive> - which archive stores the document (Can be one of 7 archives, for this exercise, see above).
+Location – where the document is stored. Consists of:
+<ArchiveCode> - a 3 letter code that identifies the archive where the document is stored. (see the list of archives above).
+<Building> - a 2 digit code that identifies which building stores the document. (NOTE: for this exercise, no archive has more than 14 buildings, numbered 1 to 15).
+<RoomNumber> - the number of the room. We can safely assume that no building has more than 1023 rooms.
+<Shelf> - the number of the shelf. We can safely assume that no room has more than 2047 shelves.
+Each document is described by a separate line with the format:
+<Date>; <Archive>; <ArchiveCode>; <Building>; <RoomNumber>; <Shelf>;
+Example inputs:
+1815-JUN-18; OsloArchive;     OSL; 13; 42; 1500;
+1805-DEC-02; NationalArchive; NAT; 07; 84; 1780;
+1805-OCT-21; MaritimeArchive; MAR; 03; 126; 1111;
+1814-MAY-17; NationalArchive; NAT; 01; 01; 0001;
+1905-JUN-07; NationalArchive; NAT; 02; 42; 0042;
+
+You __MUST__ come up with an efficient compression algorithm which is specialized and customized for this problem domain (i.e., do not use either `Huffman` nor `LZW`, but rather use `DnaCompressor` as inspiration).
+
+Write a class called `ArchiveCompressor`  that extends the `GenericCompressor` to perform the compression.
+Write a class called `ArchiveCompressorTest` to test your work.
 
 ## Solutions
 
