Added a new streams exercise (from past exams), and a couple of possible solutions for it.

--- a/docs/exercises/ex08.md
+++ b/docs/exercises/ex08.md
@@ -56,6 +56,22 @@ Once you think you fully understand it, write its implementation
 on paper (e.g., using a pen), without looking at the source code.
 Once done, compare what you wrote with the actual implementation. 
 
+## Part E
+
+Consider a collection of diploma projects belonging to students in the University. 
+Each project has a title and a list of authors.
+Each author is a Student, that has a name, a diploma project they participate in, 
+and a list of courses they have taken in their studies 
+(with an associated numerical grade, between 0 and 5, where 0 is failed).
+
+The task is, starting from a collection of diploma projects and using streams:
+Get a list (ArrayList) of diploma project titles, from those students that have taken a given course ]
+(identified by courseId, for example “pg4200”), and that have passed that course with at least a grade of 2 
+(see numerical grade mentioned above). Since several students may contribute to a given diploma project, 
+make sure each title only appears once.
+
+To make things slightly easier, the class `PartETest` contains a couple of methods
+to generate diploma projects, courses, and students, to allow you to test your code. 
 
 ## Solutions
 
